--- a/Frontend/Verification_restaurant_admin.html
+++ b/Frontend/Verification_restaurant_admin.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Welfare - Free Bootstrap 4 Template by Colorlib</title>
+    <title>All Unverified Restaurants</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Overpass:300,400,400i,600,700" rel="stylesheet">
 
@@ -22,7 +23,6 @@
 
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/jquery.timepicker.css">
-
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
@@ -61,6 +61,9 @@
                 margin-top: 1rem !important;
             }
         }
+        .card {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 
@@ -83,7 +86,8 @@
                             Volunteers
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Verification_Ind_admin.html">Pending Verification</a></li>
+                            <li><a class="dropdown-item" href="Verification_Ind_admin.html">Pending Verification</a>
+                            </li>
                             <li><a class="dropdown-item" href="All_Ind_admin.html">All Volunteers</a></li>
                         </ul>
                     </li>
@@ -93,7 +97,8 @@
                             NGO
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Verification_ngo_admin.html">Pending Verification</a></li>
+                            <li><a class="dropdown-item" href="Verification_ngo_admin.html">Pending Verification</a>
+                            </li>
                             <li><a class="dropdown-item" href="All_ngo_admin.html">All NGOs</a></li>
                         </ul>
                     </li>
@@ -103,7 +108,8 @@
                             Restaurant
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Verification_restaurant_admin.html">Pending Verification</a></li>
+                            <li><a class="dropdown-item" href="Verification_restaurant_admin.html">Pending
+                                    Verification</a></li>
                             <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
                         </ul>
                     </li>
@@ -116,84 +122,156 @@
     </nav>
     <!-- END nav -->
 
-    <div class="container" style="margin-top: 6rem">
-        <!-- Individual Verification Card -->
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 class="card-title">Username: abc123</h5>
-                                    <p class="card-text">Restaurant Name: Sunshine</p>
-                                    <p class="card-text">Type: Restaurant</p>
-                                    <p class="card-text">Business License Number: 12345</p>
-                                    <p class="card-text">Website URL: cricbuzz.com</p>
-                                    <p class="card-text">Manager Name: Kaleshbhai</p>
-                                    <p class="card-text">Primary Contact Email: abc@gmail.com</p>
-                                    <p class="card-text">Primary Contact Phone: 98767898722</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p class="card-text">Address Line 1: 123 Main St</p>
-                                    <p class="card-text">Address Line 2: Apt 4B</p>
-                                    <p class="card-text">City: City</p>
-                                    <p class="card-text">State: State</p>
-                                    <p class="card-text">Zip Code: 12345</p>
-                                    <p class="card-text">Country: Country</p>
-                                    <p class="card-text">Latitude: 12.3456</p>
-                                    <p class="card-text">Longitude: 78.9012</p>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-success btn-verify" onclick="verifyRestaurant(this)">Verify
-                                    Restaurant</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <!-- Search Bar -->
+    <div class="container my-4" style="padding-top: 5rem">
+        <div class="input-group">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search Here..." style="border-radius: 5px;">
+            <button id="clearButton" class="btn btn-secondary" type="button" style="border-radius: 5px; margin-left: 10px;">Clear</button>
         </div>
-
-        <!-- Individual Verification Card -->
-        <div class="container mt-2">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 class="card-title">Username: abc123</h5>
-                                    <p class="card-text">Restaurant Name: Sunshine</p>
-                                    <p class="card-text">Type: Restaurant</p>
-                                    <p class="card-text">Business License Number: 12345</p>
-                                    <p class="card-text">Website URL: cricbuzz.com</p>
-                                    <p class="card-text">Manager Name: Kaleshbhai</p>
-                                    <p class="card-text">Primary Contact Email: abc@gmail.com</p>
-                                    <p class="card-text">Primary Contact Phone: 98767898722</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p class="card-text">Address Line 1: 123 Main St</p>
-                                    <p class="card-text">Address Line 2: Apt 4B</p>
-                                    <p class="card-text">City: City</p>
-                                    <p class="card-text">State: State</p>
-                                    <p class="card-text">Zip Code: 12345</p>
-                                    <p class="card-text">Country: Country</p>
-                                    <p class="card-text">Latitude: 12.3456</p>
-                                    <p class="card-text">Longitude: 78.9012</p>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-success btn-verify" onclick="verifyRestaurant(this)">Verify
-                                    Restaurant</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
+
+    <div class="container" style="margin-top: 2rem">
+        <div id="restaurant-container"></div>
+    </div>
+
+<script>
+    const BACKEND_URL = "http://localhost:3000"; // Backend URL
+    let restaurants = []; // Global variable to store restaurant data
+
+    async function fetchRestaurants() {
+        try {
+            const token = localStorage.getItem('authToken');
+            const response = await fetch(`${BACKEND_URL}/admin/getallunverifiedrestaurants`, {
+                method: "GET",
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Authorization': token,
+                }
+            });
+            if (response.status !== 200) {
+                alert('Failed to fetch restaurants data');
+                return;
+            }
+            restaurants = await response.json();
+            displayRestaurants(); 
+
+        } catch (error) {
+            console.error(error);
+            alert('Error fetching data'); // Handle error
+        }
+    }
+
+    function viewFoodHandlersPermit(url) {
+        window.open(url, '_blank'); // Opens the URL in a new tab/window
+    }
+
+    function redirectToWebsite(websiteUrl) {
+        window.open(websiteUrl, '_blank'); // Opens the website URL in a new tab/window
+    }
+
+    function viewLocationOnMap(latitude, longitude) {
+        const mapUrl = `https://www.google.com/maps/search/?api=1&query=${latitude},${longitude}`;
+        window.open(mapUrl, '_blank'); // Opens the map URL in a new tab/window
+    }
+    
+    function displayRestaurants() {
+        const container = document.getElementById('restaurant-container');
+        container.innerHTML = ''; // Clear previous content
+
+        restaurants.forEach(restaurant => {
+            const restaurantCard = `
+                <div class="container mt-2">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <h5 class="card-title">Restaurant Name: ${restaurant.name}</h5>
+                                            <p class="card-text">Type: ${restaurant.type}</p>
+                                            <p class="card-text">Manager Name: ${restaurant.manager_name}</p>
+                                            <p class="card-text">Business License Number: ${restaurant.business_license_number}</p>
+                                            <p class="card-text">Website:
+                                                ${restaurant.website_url ?
+                                                    `<a href="javascript:void(0);" 
+                                                    onclick="redirectToWebsite('${restaurant.website_url}')">
+                                                    ${restaurant.website_url}
+                                                </a>`
+                                                : "Not Avaialable"}
+                                            </p>
+                                                <p class="card-text">Food Handlers Permit: 
+                                                ${restaurant.food_handlers_permit ? 
+                                                    `<a href="javascript:void(0);" 
+                                                        onclick="viewFoodHandlersPermit('${restaurant.food_handlers_permit}')">
+                                                        Click here to view
+                                                    </a>` 
+                                                    : 'Not available'}
+                                                </p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p class="card-text">Email: ${restaurant.primary_contact_email}</p>
+                                                <p class="card-text">Phone: ${restaurant.primary_contact_phone}</p>
+                                            <p class="card-text"> Address : ${formatAddress(restaurant.physical_address)}</p>
+                                             <p class="card-text">Location: 
+                                                <a href="javascript:void(0);" 
+                                                    onclick="viewLocationOnMap(${restaurant.physical_address.geo_location.latitude}, ${restaurant.physical_address.geo_location.longitude})">
+                                                    Click here to view on map
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="text-center mt-3">
+                                        <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
+                                            onclick="VerifyRestaurant('${restaurant._id}')">Verify Restaurant</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>`;
+            container.insertAdjacentHTML('beforeend', restaurantCard);
+        });
+    }
+
+    function formatAddress(address) {
+        return `
+            ${address.address_line_1}, ${address.address_line_2 ? address.address_line_2 + ', ' : ''}
+            ${address.city}, ${address.state}, ${address.zip_code}, ${address.country}
+        `;
+    }
+
+    async function VerifyRestaurant(rest_id) {
+        const temp = { rest_id : rest_id}
+        const formData = new FormData();
+        formData.append('rest_id', rest_id);
+        try {
+            const token = localStorage.getItem('authToken');
+            const response = await fetch(`${BACKEND_URL}/admin/verifyrestaurant`, {
+                method: 'POST',
+                headers: {
+                    'Authorization': token,
+                },
+                body : formData,
+            });
+            if (response.status === 201) {
+                const restaurantCard = document.getElementById('restaurant-container');
+                restaurantCard.innerHTML = ''; // Clear current content
+                fetchRestaurants(); // Reload the list after deletion
+                alert('Restaurant Verified successfully');
+            }else {
+                alert('Failed to verify restaurant');
+            }
+            } catch (error) {
+                console.error(error);
+                alert('Error verifying restaurant');
+            }
+    }
+
+    document.addEventListener('DOMContentLoaded', async () => {
+        await fetchRestaurants(); // Fetch restaurants on page load
+    });
+
+</script>
 
     <!-- Footer Start -->
     <footer class="ftco-footer ftco-section img">
@@ -204,8 +282,7 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">About Us</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the
-                            blind texts.</p>
+                            there live the blind texts.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -275,13 +352,12 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    <p>
                         Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                        is made with
-                        <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        <script>
+                            document.write(new Date().getFullYear());
+                        </script> All rights reserved | This template is made with <i class="icon-heart"
+                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
                     </p>
                 </div>
             </div>
@@ -289,14 +365,6 @@
     </footer>
     <!-- Footer End -->
 
-    <script>
-        function verifyRestaurant(button) {
-            button.textContent = 'Verified';
-            button.classList.remove('btn-success');
-            button.classList.add('btn-secondary');
-            button.disabled = true;
-        }
-    </script>
     <script>
         document.getElementById('logoutLink').addEventListener('click', function (event) {
             event.preventDefault(); // Prevent the default link action
