--- a/Frontend/ngolist_Ind.html
+++ b/Frontend/ngolist_Ind.html
@@ -52,6 +52,7 @@
                     <li class="nav-item"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
                     <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
                     <li class="nav-item active"><a href="ngolist_Ind.html" class="nav-link">NGO</a></li>
+                    <li class="nav-item"><a href="donation_histroy_individual.html" class="nav-link">My Work</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
