--- a/Frontend/donation_histroy_admin.html
+++ b/Frontend/donation_histroy_admin.html
@@ -84,7 +84,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Welfare</a>
+            <a class="navbar-brand" href="index_admin.html">Welfare</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
@@ -92,32 +92,43 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index_ngo.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about_ngo.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
-                    <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
+                    <li class="nav-item"><a href="index_admin.html" class="nav-link">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Donations
+                            Volunteers
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="food_transations_ngo.html">Incoming Donations</a></li>
-                            <li><a class="dropdown-item" href="accepted_donations_ngo.html">Accepted Donations</a></li>
-                            <li><a class="dropdown-item" href="donations_history_ngo.html">Donations History</a></li>
+                            <li><a class="dropdown-item" href="Verification_Ind_admin.html">Pending Verification</a>
+                            </li>
+                            <li><a class="dropdown-item" href="All_Ind_admin.html">All Volunteers</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="icon-user"></i>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            NGO
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item" href="#">View Profile</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
-                        </div>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_ngo_admin.html">Pending Verification</a>
+                            </li>
+                            <li><a class="dropdown-item" href="All_ngo_admin.html">All NGOs</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Restaurant
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="Verification_restaurant_admin.html">Pending
+                                    Verification</a></li>
+                            <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="donation_histroy_admin.html" class="nav-link">Food Logs</a></li>
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -184,7 +195,7 @@
         async function fetchFoodTransactions() {
             const token = localStorage.getItem('authToken');
             try {
-                const response = await fetch(`${BACKEND_URL}/foodtransaction/foodlogs/ngo`, {
+                const response = await fetch(`${BACKEND_URL}/admin/getallfoodlogs`, {
                     method: "GET",
                     headers: {
                         'Authorization': token
@@ -195,7 +206,7 @@
                     alert(`Error: ${data.message}`); 
                     return;
                 }
-                foodTransactions = await response.json(); // Assign fetched data to global variable
+                foodTransactions = await response.json();
                 displayFoodTransactions(); // Call function to display transactions
             } catch (error) {
                 console.error(error);
