--- a/Frontend/index_admin.html
+++ b/Frontend/index_admin.html
@@ -68,7 +68,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Welfare</a>
+            <a class="navbar-brand" href="index_admin.html">Welfare</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
@@ -76,7 +76,7 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="index_admin.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="index_admin.html" class="nav-link">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -110,6 +110,7 @@
                             <li><a class="dropdown-item" href="All_restaurant_admin.html">All Restaurants</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item"><a href="donation_histroy_admin.html" class="nav-link">Food Logs</a></li>
                     <li class="nav-item">
                         <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
                     </li>
