--- a/Frontend/index_restaurant.html
+++ b/Frontend/index_restaurant.html
@@ -58,17 +58,17 @@
               <li><a class="dropdown-item" href="donations_history_restaurant.html">Donations History</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              <i class="icon-user"></i>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="icon-user"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
-              <a class="dropdown-item" href="#">View Profile</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+                <a class="dropdown-item" href="Profile_restaurant.html">View Profile</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
             </div>
-          </li>
+        </li>
         </ul>
       </div>
     </div>
