--- a/Frontend/Profile_restaurant.html
+++ b/Frontend/Profile_restaurant.html
@@ -492,14 +492,35 @@ async function saveProfile(event) {
     </div>
 
 <script>
-    document.getElementById('deleteAccount').addEventListener('click', function (e) {
+    document.getElementById('deleteAccount').addEventListener('click', async function (e) {
         e.preventDefault();
+        const BACKEND_URL = "http://localhost:3000"; 
         if (confirm('Are you sure you want to delete your account? This action cannot be undone.')) {
-            // Here you can perform the deletion action
-            alert('Account deleted successfully!'); // Placeholder for actual deletion logic
-        } else {
-            // Cancel action
-            alert('Action canceled.');
+            try {
+                    const token = localStorage.getItem('authToken');
+                    if (!token) {
+                        alert('Authorization token is missing. Please log in again.');
+                        return;
+                    }
+                    const response = await fetch(`${BACKEND_URL}/restaurant/delete`, {
+                        method: 'DELETE',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'Authorization': token,
+                        },
+                    });
+    
+                    if (response.status === 200) {
+                        alert('Account deleted successfully');
+                        window.location.href = 'index.html';
+                    } else {
+                        const data = await response.json();
+                        alert(`Error: ${data.message}`); // Display error message from the response
+                    }
+                } catch (error) {
+                    console.error('Error deleting profile:', error);
+                    alert('Error deleting profile'); // Handle error
+                }
         }
     });
 
