--- a/Frontend/index_ngo.html
+++ b/Frontend/index_ngo.html
@@ -46,6 +46,7 @@
           <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
+          <li class="nav-item"><a href="Available_Volunteers.html" class="nav-link">Volunteers</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
