forgot password page

--- a/Frontend/Forgot_Password.html
+++ b/Frontend/Forgot_Password.html
@@ -86,7 +86,7 @@
                             <label for="username">Username</label>
                             <input type="text" class="form-control" id="username" placeholder="Enter your username">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" id="send-otp">
                             <button type="button" class="btn btn-primary btn-block" id="send-otp-button"
                                 onclick="sendOTP()">Send OTP</button>
                         </div>
@@ -240,6 +240,7 @@
                     if(response.status === 200)
                     {
                         document.getElementById("otp-group").classList.remove("d-none");
+                        document.getElementById('send-otp').classList.add("d-none");
                         alert('OTP sent to your email');
                     }
                     else{
@@ -269,6 +270,7 @@
                     if(response.status === 200)
                     {
                         document.getElementById("new-password-group").classList.remove("d-none");
+                        document.getElementById('verify-otp-button').classList.add('d-none');
                         document.getElementById("reset-id").value = data.resetId;
                         alert('OTP verified. You can now reset your password.');
                     }
